<resources>
    <string name="app_name">TugasDay3</string>
    <string name="tempor_garage">TEMPOR GARAGE</string>
    <string name="bugatti">BUGATTI</string>
    <string name="porsche">PORSCHE</string>
    <string name="koenigsegg">KOENIGSEGG</string>
    <string name="bugattii_veyron">BUGATTII VEYRON</string>
    <string name="bugatti_veyron_ss">Bugatti Veyron SS</string>
    <string name="see_more">See More</string>
    <string name="bugatti_chiron">bugatti chiron</string>
    <string name="bc">Bugatti Chiron</string>
    <string name="bugattidivo">bugattidivo</string>
    <string name="bugatti_divo">Bugatti Divo</string>
    <string name="lavoiturenoire">lavoiturenoire</string>
    <string name="la_voiture_noire">La Voiture Noire</string>
    <string name="centodieci">Centodieci</string>
    <string name="porsche_models">PORSCHE MODELS</string>
    <string name="_911gt3rs">911GT3RS</string>
    <string name="_911_gt3_rs">911 GT3 RS</string>
    <string name="_718_gt4_rs">718 GT4 RS</string>
    <string name="_911carrera">911carrera</string>
    <string name="_911_carrera">911 Carrera</string>
    <string name="_718spyder">718spyder</string>
    <string name="_718_GT4">718 GT4 RS</string>
    <string name="taycann">taycann</string>
    <string name="taycan">Taycan</string>
    <string name="agera">AGERA</string>
    <string name="koenigsegg_agera">Koenigsegg Agera</string>
    <string name="koenigsegg_agera_rs">Koenigsegg Agera RS</string>
    <string name="jesko">jesko</string>
    <string name="koenigsegg_jesko">Koenigsegg Jesko</string>
    <string name="regera">regera</string>
    <string name="koenigsegg_regera">Koenigsegg Regera</string>
    <string name="one1">one1</string>
    <string name="koenigsegg_one_1">Koenigsegg One:1</string>
    <string name="bugatti_veyron_ss_">BUGATTI VEYRON SS</string>
    <string name="bugatti_veyron_super_sport">BUGATTI VEYRON SUPER SPORT</string>
    <string name="price_2_400_000">Price $ 2,400,000</string>
    <string name="spesifikasi_bugatti_veyron_super_sport_n_nmesin_8_0_liter_quad_turbocharged_w16_tenaga_1_200_1_500_ps_torsi_1_500_nm_nperforma_kecepatan_maksimum_terbatas_hingga_sekitar_415_km_jam_untuk_menjaga_kestabilan_akselerasi_0_100_km_jam_sekitar_2_5_detik_ntransmisi_7_kecepatan_dsg_direct_shift_gearbox_dengan_paddle_shifters_nrangka_dan_suspensi_rangka_monokok_karbon_fiber_suspensi_suspensi_independen_dengan_pengaturan_kinerja_tinggi_nrem_rem_depan_brembo_rem_keramik_karbon_rem_belakang_brembo_rem_keramik_karbon_ndimensi_dan_bobot_panjang_sekitar_4_462_mm_lebar_sekitar_1_998_mm_tinggi_sekitar_1_204_mm_berat_sekitar_1_888_kg_ninterior_interior_yang_mewah_dengan_material_berkualitas_tinggi_sistem_hiburan_canggih_dan_sistem_navigasi_neksterior_desain_aerodinamis_yang_agresif_material_konstruksi_ringan_untuk_meningkatkan_performa_nfitur_lainnya_sistem_kontrol_traksi_sistem_kontrol_stabilitas_sistem_pengereman_anti_blokir_abs_sistem_pengurangan_kecepatan_darurat_sistem_pengukur_tekanan_ban">Spesifikasi Bugatti Veyron Super Sport\n\nMesin: 8.0-liter quad-turbocharged W16, Tenaga: 1.200 - 1.500 PS, Torsi: 1.500 Nm\nPerforma: Kecepatan Maksimum: Terbatas hingga sekitar 415 km/jam untuk menjaga kestabilan, Akselerasi 0-100 km/jam: Sekitar 2,5 detik\nTransmisi: 7-kecepatan DSG (Direct-Shift Gearbox) dengan paddle shifters\nRangka dan Suspensi: Rangka: Monokok karbon-fiber, Suspensi: Suspensi independen dengan pengaturan kinerja tinggi\nRem: Rem Depan: Brembo rem keramik karbon, Rem Belakang: Brembo rem keramik karbon\nDimensi dan Bobot: Panjang: Sekitar 4.462 mm, Lebar: Sekitar 1.998 mm, Tinggi: Sekitar 1.204 mm, Berat: Sekitar 1.888 kg\nInterior: Interior yang mewah dengan material berkualitas tinggi, Sistem hiburan canggih dan sistem navigasi\nEksterior: Desain aerodinamis yang agresif, Material konstruksi ringan untuk meningkatkan performa\nFitur Lainnya: Sistem kontrol traksi, Sistem kontrol stabilitas, Sistem pengereman anti-blokir (ABS), Sistem pengurangan kecepatan darurat, Sistem pengukur tekanan ban</string>
    <string name="mesin_8_0_liter_quad_turbocharged_w16_tenaga_1_479_ps_torsi_1_600_nm_nperforma_kecepatan_maksimum_terbatas_hingga_420_km_jam_elektronik_lebih_dari_500_km_jam_tanpa_pembatas_elektronik_akselerasi_0_100_km_jam_sekitar_2_5_detik_ntransmisi_7_kecepatan_dsg_direct_shift_gearbox_dengan_paddle_shifters_nrangka_dan_suspensi_rangka_monokok_karbon_fiber_suspensi_suspensi_independen_dengan_pengaturan_kinerja_tinggi_nrem_rem_depan_brembo_rem_karbon_seramik_rem_belakang_brembo_rem_karbon_seramik_ndimensi_dan_bobot_panjang_4_544_mm_lebar_2_038_mm_tinggi_1_212_mm_berat_1_996_kg_ninterior_interior_yang_mewah_dengan_material_berkualitas_tinggi_sistem_hiburan_canggih_dan_sistem_navigasi_neksterior_desain_aerodinamis_yang_inovatif_material_konstruksi_ringan_untuk_meningkatkan_performa_nfitur_lainnya_sistem_kontrol_traksi_sistem_kontrol_stabilitas_sistem_pengereman_anti_blokir_abs_sistem_pengurangan_kecepatan_darurat_sistem_pengukur_tekanan_ban">Mesin: 8.0-liter quad-turbocharged W16, Tenaga: 1.479 PS, Torsi: 1.600 Nm\nPerforma: Kecepatan Maksimum: Terbatas hingga 420 km/jam (elektronik) / lebih dari 500 km/jam (tanpa pembatas elektronik), Akselerasi 0-100 km/jam: Sekitar 2,5 detik\nTransmisi: 7-kecepatan DSG (Direct-Shift Gearbox) dengan paddle shifters\nRangka dan Suspensi: Rangka: Monokok karbon-fiber, Suspensi: Suspensi independen dengan pengaturan kinerja tinggi\nRem: Rem Depan: Brembo rem karbon-seramik, Rem Belakang: Brembo rem karbon-seramik\nDimensi dan Bobot: Panjang: 4.544 mm, Lebar: 2.038 mm, Tinggi: 1.212 mm, Berat: 1.996 kg\nInterior: Interior yang mewah dengan material berkualitas tinggi, Sistem hiburan canggih dan sistem navigasi\nEksterior: Desain aerodinamis yang inovatif, Material konstruksi ringan untuk meningkatkan performa\nFitur Lainnya: Sistem kontrol traksi, Sistem kontrol stabilitas, Sistem pengereman anti-blokir (ABS), Sistem pengurangan kecepatan darurat, Sistem pengukur tekanan ban</string>
    <string name="bchion">BUGATTI CHIRON</string>
    <string name="bugatti_chironN">BUGATTI CHIRON</string>
    <string name="mesin_8_0_liter_quad_turbocharged_w16_tenaga_1_500_ps_torsi_1_600_nm_nperforma_kecepatan_maksimum_terbatas_hingga_380_km_jam_akselerasi_0_100_km_jam_sekitar_2_4_detik_ntransmisi_7_kecepatan_dsg_direct_shift_gearbox_dengan_paddle_shifters_nrangka_dan_suspensi_rangka_monokok_karbon_fiber_suspensi_suspensi_independen_dengan_pengaturan_kinerja_tinggi_nrem_rem_depan_brembo_rem_karbon_seramik_rem_belakang_brembo_rem_karbon_seramik_ndimensi_dan_bobot_panjang_4_419_mm_lebar_1_212_mm_tinggi_1_212_mm_berat_1_956_kg_ninterior_interior_yang_mewah_dengan_material_berkualitas_tinggi_sistem_hiburan_canggih_dan_sistem_navigasi_neksterior_desain_aerodinamis_yang_agresif_dan_unik_material_konstruksi_ringan_untuk_meningkatkan_performa_nfitur_lainnya_sistem_kontrol_traksi_sistem_kontrol_stabilitas_sistem_pengereman_anti_blokir_abs_sistem_pengurangan_kecepatan_darurat_sistem_pengukur_tekanan_ban">Mesin: 8.0-liter quad-turbocharged W16, Tenaga: 1.500 PS, Torsi: 1.600 Nm\nPerforma: Kecepatan Maksimum: Terbatas hingga 380 km/jam, Akselerasi 0-100 km/jam: Sekitar 2,4 detik\nTransmisi: 7-kecepatan DSG (Direct-Shift Gearbox) dengan paddle shifters\nRangka dan Suspensi: Rangka: Monokok karbon-fiber, Suspensi: Suspensi independen dengan pengaturan kinerja tinggi\nRem: Rem Depan: Brembo rem karbon-seramik, Rem Belakang: Brembo rem karbon-seramik\nDimensi dan Bobot: Panjang: 4.419 mm, Lebar: 1.212 mm, Tinggi: 1.212 mm, Berat: 1.956 kg\nInterior: Interior yang mewah dengan material berkualitas tinggi, Sistem hiburan canggih dan sistem navigasi\nEksterior: Desain aerodinamis yang agresif dan unik, Material konstruksi ringan untuk meningkatkan performa\nFitur Lainnya: Sistem kontrol traksi, Sistem kontrol stabilitas, Sistem pengereman anti-blokir (ABS), Sistem pengurangan kecepatan darurat, Sistem pengukur tekanan ban</string>
    <string name="bugatti_divoo">BUGATTI DIVO</string>
    <string name="la_voiture_noireE">LA VOITURE NOIRE</string>
    <string name="centodieciI">CENTODIECI</string>
    <string name="mesin_8_0_liter_quad_turbocharged_w16_tenaga_1_600_ps_torsi_1_600_nm_nperforma_kecepatan_maksimum_terbatas_hingga_380_km_jam_akselerasi_0_100_km_jam_sekitar_2_4_detik_ntransmisi_7_kecepatan_dsg_direct_shift_gearbox_dengan_paddle_shifters_nrangka_dan_suspensi_rangka_monokok_karbon_fiber_suspensi_suspensi_independen_dengan_pengaturan_kinerja_tinggi_nrem_rem_depan_brembo_rem_karbon_seramik_rem_belakang_brembo_rem_karbon_seramik_ndimensi_dan_bobot_panjang_4_456_mm_lebar_2_038_mm_tinggi_1_212_mm_berat_tidak_diumumkan_ninterior_interior_yang_mewah_dengan_material_berkualitas_tinggi_sistem_hiburan_canggih_dan_sistem_navigasi_neksterior_desain_aerodinamis_yang_unik_dan_eksklusif_material_konstruksi_ringan_untuk_meningkatkan_performa_nfitur_lainnya_sistem_kontrol_traksi_sistem_kontrol_stabilitas_sistem_pengereman_anti_blokir_abs_sistem_pengurangan_kecepatan_darurat_sistem_pengukur_tekanan_ban">Mesin: 8.0-liter quad-turbocharged W16, Tenaga: 1.600 PS, Torsi: 1.600 Nm\nPerforma: Kecepatan Maksimum: Terbatas hingga 380 km/jam, Akselerasi 0-100 km/jam: Sekitar 2,4 detik\nTransmisi: 7-kecepatan DSG (Direct-Shift Gearbox) dengan paddle shifters\nRangka dan Suspensi: Rangka: Monokok karbon-fiber, Suspensi: Suspensi independen dengan pengaturan kinerja tinggi\nRem: Rem Depan: Brembo rem karbon-seramik, Rem Belakang: Brembo rem karbon-seramik\nDimensi dan Bobot: Panjang: 4.456 mm, Lebar: 2.038 mm, Tinggi: 1.212 mm, Berat: Tidak diumumkan\nInterior: Interior yang mewah dengan material berkualitas tinggi, Sistem hiburan canggih dan sistem navigasi\nEksterior: Desain aerodinamis yang unik dan eksklusif, Material konstruksi ringan untuk meningkatkan performa\nFitur Lainnya: Sistem kontrol traksi, Sistem kontrol stabilitas, Sistem pengereman anti-blokir (ABS), Sistem pengurangan kecepatan darurat, Sistem pengukur tekanan ban</string>
    <string name="mesin_4_0_liter_naturally_aspirated_flat_six_tenaga_520_ps_torsi_470_nm_nperforma_kecepatan_maksimum_lebih_dari_312_km_jam_akselerasi_0_100_km_jam_sekitar_3_0_detik_ntransmisi_7_kecepatan_pdk_porsche_doppelkupplung_dengan_paddle_shifters_nrangka_dan_suspensi_rangka_monokok_karbon_fiber_dan_baja_suspensi_suspensi_olahraga_yang_disesuaikan_untuk_trek_nrem_rem_depan_brembo_rem_karbon_seramik_rem_belakang_brembo_rem_karbon_seramik_ndimensi_dan_bobot_panjang_4_557_mm_lebar_1_880_mm_tinggi_1_290_mm_berat_sekitar_1_420_kg_ninterior_interior_yang_fungsional_dengan_fokus_pada_performa_kursi_balap_dan_sistem_hiburan_yang_minimalis_neksterior_desain_aerodinamis_yang_agresif_untuk_meningkatkan_downforce_spoiler_belakang_besar_dan_difuser_untuk_stabilitas_di_trek_nfitur_lainnya_sistem_kontrol_traksi_sistem_kontrol_stabilitas_sistem_pengereman_anti_blokir_abs_sistem_pengukur_tekanan_ban">Mesin: 4.0-liter naturally aspirated flat-six, Tenaga: 520 PS, Torsi: 470 Nm\nPerforma: Kecepatan Maksimum: Lebih dari 312 km/jam, Akselerasi 0-100 km/jam: Sekitar 3,0 detik\nTransmisi: 7-kecepatan PDK (Porsche Doppelkupplung) dengan paddle shifters\nRangka dan Suspensi: Rangka: Monokok karbon-fiber dan baja, Suspensi: Suspensi olahraga yang disesuaikan untuk trek\nRem: Rem Depan: Brembo rem karbon-seramik, Rem Belakang: Brembo rem karbon-seramik\nDimensi dan Bobot: Panjang: 4.557 mm, Lebar: 1.880 mm, Tinggi: 1.290 mm, Berat: Sekitar 1.420 kg\nInterior: Interior yang fungsional dengan fokus pada performa, Kursi balap dan sistem hiburan yang minimalis\nEksterior: Desain aerodinamis yang agresif untuk meningkatkan downforce, Spoiler belakang besar dan difuser untuk stabilitas di trek\nFitur Lainnya: Sistem kontrol traksi, Sistem kontrol stabilitas, Sistem pengereman anti-blokir (ABS), Sistem pengukur tekanan ban</string>
    <string name="_718_spyder_rs">718 Spyder RS</string>
</resources>