<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4A0808"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv1"
        android:text="@string/tempor_garage"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:id="@+id/ib1"
        android:layout_width="281dp"
        android:layout_height="137dp"
        android:contentDescription="@string/bugatti"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv1"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_bugatti_logo"/>

    <ImageButton
        android:id="@+id/ib2"
        android:layout_width="284dp"
        android:layout_height="191dp"
        android:layout_below="@id/ib1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/porsche_logo"
        android:contentDescription="@string/porsche" />

    <ImageButton
        android:id="@+id/ib3"
        android:layout_width="230dp"
        android:layout_height="212dp"
        android:layout_below="@id/ib2"
        android:contentDescription="@string/koenigsegg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_koenigsegg_logo" />

</RelativeLayout>